--- a/src/Beacon.Contracts/Beacon.Contracts.csproj
+++ b/src/Beacon.Contracts/Beacon.Contracts.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="RickDotNet.Apollo.Abstractions" Version="0.3.1" />
+      <PackageReference Include="RickDotNet.Apollo" Version="0.4.4" />
     </ItemGroup>
 
 </Project>
